<resources>
    <string name="app_name">Lesson 9 - Data is gold</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="your_login">Your login:</string>
    <string name="your_password">Your password:</string>
    <string name="retype_password">Retype password:</string>
    <string name="user_is_not_found">User with such login and password is not found</string>
    <string name="login_password_can_not_be_empty">Login and password can not be empty</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="user_is_already_presented">User with such login is already presented</string>
    <string name="registration_successful">Registration successful</string>
</resources>
